# coachlink

./: .gitignore  CLAUDE.md  README.md
db/: schema.sql
docs/: CoachLink ER Diagram.dc.html  CoachLink Spec.dc.html  CoachLink Standalone.html  implementation.md
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2b022badd088_initial_schema.py
server/app/: billing.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
server/app/routers/: admin.py  auth.py  batches.py  clients.py  common.py  dashboard.py  enrollments.py  instructors.py  invoices.py  locations.py  members.py  org.py  services.py  subscriptions.py
server/scripts/: nightly_invoices.py  seed.py
server/tests/: conftest.py  test_auth.py  test_billing.py  test_domain.py  test_expiry.py  test_isolation.py
web/app/: package-lock.json  package.json  vite.config.ts
web/app/src/: App.tsx  index.css
web/app/src/api/: client.ts  schema.d.ts  types.ts
web/app/src/components/: Layout.tsx  ui.tsx
web/app/src/lib/: format.ts
web/app/src/pages/: BatchDetail.tsx  ClientDetail.tsx  Clients.tsx  Dashboard.tsx  InstructorDetail.tsx  Instructors.tsx  Invoices.tsx  Login.tsx  Members.tsx  Operations.tsx  Platform.tsx  Services.tsx
web/app/src/store/: auth.ts
web/elevionix-design-system/: _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
web/elevionix-design-system/tokens/: colors.css  fonts.css  spacing.css  typography.css
